loading models with trilib

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ crashlytics-build.properties
 /Realivation_BurstDebugInformation_DoNotShip
 /Assets/_Recovery
 Assets/_Recovery.meta
+/Assets/TriLib
