--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,7 @@ crashlytics-build.properties
 /Assets/_Recovery
 Assets/_Recovery.meta
 /Assets/TriLib
+Assets/Resources/PerformanceTestRunInfo.json
+Assets/Resources/PerformanceTestRunInfo.json.meta
+Assets/Resources/PerformanceTestRunSettings.json
+Assets/Resources/PerformanceTestRunSettings.json.meta
